# platinum

./: .gitignore  CMakeLists.txt  Makefile  clean_imgui_ini.sh  compile_commands.json  run.fish
fastgltf/lib/cmake/fastgltf/: fastgltfConfig.cmake
imgui/: imgui.h  imgui_widgets.cpp
nfd/: libnfd
platinum.xcodeproj/: project.pbxproj
platinum.xcodeproj/project.xcworkspace/xcuserdata/teo.xcuserdatad/: UserInterfaceState.xcuserstate
platinum.xcodeproj/xcshareddata/xcschemes/: platinum.xcscheme
platinum.xcodeproj/xcuserdata/teo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
platinum.xcodeproj/xcuserdata/teo.xcuserdatad/xcschemes/: xcschememanagement.plist
resource/lut/: ggx_E.exr  ggx_E_avg.exr  ggx_E_trans_in_0.exr  ggx_E_trans_in_1.exr  ggx_E_trans_in_10.exr  ggx_E_trans_in_11.exr  ggx_E_trans_in_12.exr  ggx_E_trans_in_13.exr  ggx_E_trans_in_14.exr  ggx_E_trans_in_15.exr  ggx_E_trans_in_16.exr  ggx_E_trans_in_17.exr  ggx_E_trans_in_18.exr  ggx_E_trans_in_19.exr  ggx_E_trans_in_2.exr  ggx_E_trans_in_20.exr  ggx_E_trans_in_21.exr  ggx_E_trans_in_22.exr  ggx_E_trans_in_23.exr  ggx_E_trans_in_24.exr  ggx_E_trans_in_25.exr  ggx_E_trans_in_26.exr  ggx_E_trans_in_27.exr  ggx_E_trans_in_28.exr  ggx_E_trans_in_29.exr  ggx_E_trans_in_3.exr  ggx_E_trans_in_30.exr  ggx_E_trans_in_31.exr  ggx_E_trans_in_4.exr  ggx_E_trans_in_5.exr  ggx_E_trans_in_6.exr  ggx_E_trans_in_7.exr  ggx_E_trans_in_8.exr  ggx_E_trans_in_9.exr  ggx_E_trans_in_avg.exr  ggx_E_trans_out_0.exr  ggx_E_trans_out_1.exr  ggx_E_trans_out_10.exr  ggx_E_trans_out_11.exr  ggx_E_trans_out_12.exr  (+61 more)
sdl2/SDL2.framework/Versions/A/: SDL2
sdl2/SDL2.framework/Versions/A/Headers/: SDL_events.h  SDL_gamecontroller.h  SDL_hints.h
sdl2/SDL2.framework/Versions/A/Resources/: Info.plist
sdl2/SDL2.framework/Versions/A/_CodeSignature/: CodeResources
sdl2/include/: SDL_events.h
src/: main.cpp
src/core/: camera.hpp  colorspace.cpp  colorspace.hpp  environment.cpp  environment.hpp  material.hpp  mesh.cpp  mesh.hpp  postprocessing.cpp  postprocessing.hpp  primitive.cpp  primitive.hpp  primitives.cpp  primitives.hpp  scene.cpp  scene.hpp  store.cpp  store.hpp  texture.cpp  texture.hpp  transform.hpp
src/frontend/: frontend.cpp  frontend.hpp  state.cpp  state.hpp  theme.cpp  theme.hpp  widgets.cpp  widgets.hpp  window.hpp
src/frontend/windows/: asset_manager.cpp  asset_manager.hpp  properties.cpp  properties.hpp  pt_viewport.cpp  pt_viewport.hpp  scene_explorer.cpp  scene_explorer.hpp  studio_viewport.cpp  studio_viewport.hpp
src/frontend/windows/common/: material_props.cpp  material_props.hpp
src/frontend/windows/tools/: ms_lut_gen.cpp  ms_lut_gen.hpp
src/frontend/windows/tools/shaders/: ms_lut_gen.metal
src/loaders/: exr.cpp  exr.hpp  gltf.cpp  gltf.hpp  texture.cpp  texture.hpp  texture_converter.metal
src/renderer_pt/: pt_shader_defs.hpp  renderer_pt.cpp  renderer_pt.hpp  viewport.hpp
src/renderer_pt/shaders/: bsdf.metal  defs.metal  gmon.metal  intersections.metal  kernel.metal  postprocess.metal  samplers.metal  viewport.metal
src/renderer_studio/: camera.cpp  camera.hpp  renderer_studio.cpp  renderer_studio.hpp  shader_defs.hpp  studio_camera.cpp  studio_camera.hpp
src/renderer_studio/shaders/: camera.metal  edge_pass.metal  grid.metal  main.metal  shaders.metal
src/utils/: cocoa_utils.h  cocoa_utils.mm  fool_clangd_into_parsing_msl.hpp  icc.cpp  icc.hpp  json.hpp  matrices.cpp  matrices.hpp  metal_utils.hpp  metal_utils.mm  utils.cpp  utils.hpp
